--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <title> YoNoTV Player</title>
   <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css">
   <link href="https://cdn.jsdelivr.net/gh/halfmoonui/halfmoon@1.0.4/css/halfmoon.min.css" rel="stylesheet">
-
+  <script src="https://yonotv.pages.dev/love.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
-  <script src="https://ads.karyasanjal.com/love.js"></script>
+ 
 
 
 
