--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Join Telegram Channel @livecrichdofficial">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title> YoNoTV Player</title>
+  <link href="https://nirutv.online/logo/favicon.png" rel="icon" type="image/x-icon"/>
   <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css">
   <link href="https://cdn.jsdelivr.net/gh/halfmoonui/halfmoon@1.0.4/css/halfmoon.min.css" rel="stylesheet">
   <script src="https://yonotv.pages.dev/love.js"></script>
