--- a/love.html
+++ b/love.html
@@ -16,12 +16,9 @@
   <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
  
 
-
-
-
 </head>
 <body class="dark-mode with-custom-scrollbars with-custom-css-scrollbars">
-<video id="player" controls preload="metadata" poster="https://nirutv.online/logo/image.png" class="plyr">
+<video id="player" controls preload="metadata" poster="https://nirutv.online/logo/image.png" class="plyr"></video>
   <script>
     // Get the 'id' query parameter from the URL
     const urlParams = new URLSearchParams(window.location.search);
