--- a/links.html
+++ b/links.html
@@ -48,7 +48,8 @@
         liverpool: "https://ytvlive.pages.dev/ak?m=135966 ", 
         alnassr: "https://ytvlive.pages.dev/ak?m=135966 ", 
 
-
+        icc: "https://kasin-tv.com/hi/play.php?id=137177", 
+        icc2: "https://kasin-tv.com/hi/play.php?id=137177", 
         //Country Live Stream
         germany: " https://tinyurl.com/28uy958a ", 
         spain: " https://tinyurl.com/29cexnuf ", 
