--- a/links.html
+++ b/links.html
@@ -49,7 +49,7 @@
         alnassr: "https://ytvlive.pages.dev/ak?m=135966 ", 
 
         icc: "https://kasin-tv.com/hi/play.php?id=137177", 
-        icc2: "https://kasin-tv.com/hi/play.php?id=137177", 
+        icc2: "https://embedsports.top/embed/charlie/united-arab-emirates-vs-malaysia-1629464514/1", 
         //Country Live Stream
         germany: " https://tinyurl.com/28uy958a ", 
         spain: " https://tinyurl.com/29cexnuf ", 
