--- a/links.html
+++ b/links.html
@@ -48,8 +48,8 @@
         liverpool: "https://ytvlive.pages.dev/ak?m=135966 ", 
         alnassr: "https://ytvlive.pages.dev/ak?m=135966 ", 
 
-        icc: "https://kasin-tv.com/hi/play.php?id=137180", 
-        icc2: "https://embedsports.top/embed/charlie/united-arab-emirates-vs-malaysia-1629464514/1", 
+        nepal: "https://kasin-tv.com/hi/play.php?id=137181", 
+        nepal2: "https://embedsports.top/embed/charlie/nepal-vs-japan-1629464515/1", 
         //Country Live Stream
         np: " https://nirutv.online/Player/socohd?id=9912091", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
@@ -60,8 +60,8 @@
 
         //Cricket Live Stream
         sports5: " https://hlsplayers.pages.dev/player3?url=https://rgelive.akamaized.net/hls/live/2043151/radiolive/playlist.m3u8 ", 
-        nepal1: " https://hlsplayers.pages.dev/iframe?url=https://kasin-tv.com/hi/play.php?id=137176 ", 
-        nepal: " https://nirutv.online/Player/dplyrr?url=https://funn-g1163.huibo.tv/GPA/H912/chunks.m3u8?p=48&cf=1759935841&d=&ip=133.106.248.44&e=1769936441&h=8e7c77cc1b969e6e74691d448db069a0 ", 
+        nepal122: " https://hlsplayers.pages.dev/iframe?url=https://kasin-tv.com/hi/play.php?id=137176 ", 
+        nepa221: " https://nirutv.online/Player/dplyrr?url=https://funn-g1163.huibo.tv/GPA/H912/chunks.m3u8?p=48&cf=1759935841&d=&ip=133.106.248.44&e=1769936441&h=8e7c77cc1b969e6e74691d448db069a0 ", 
         
         willow: " https://hlsplayers.pages.dev/player3?url=https://live-en.aisports.cc/moviebox/device01/playlist.m3u8 ", 
         ten1: " http://glivestreaming.com/livetv/15/slivehub/slivehub/19285973/1758897539247-57a330-a413-13ad9-b88annie8-1352cbb/24b3635a9de8b49896b60f2e6ae3df64/126.69.212.105/1758897767?=&lang=en&017efd8d37e0ae3315be8052b76d9e20 ", 
