--- a/links.html
+++ b/links.html
@@ -47,7 +47,7 @@
         realmadrid: " https://ytvlive.pages.dev/sc?id=1 ", 
         liverpool: "https://ytvlive.pages.dev/ak?m=135966 ", 
         alnassr: "https://ytvlive.pages.dev/ak?m=135966 ", 
-
+       nepal3:"https://nirutv.online/fc", 
         nepal: "https://kasin-tv.com/hi/play.php?id=137181", 
         nepal2: "https://embedsports.top/embed/charlie/nepal-vs-japan-1629464515/1", 
         //Country Live Stream
