--- a/links.html
+++ b/links.html
@@ -39,17 +39,15 @@
       const channels = {
 
 
-        //Football Live Stream
-        // https://ytvlive.pages.dev/sc?id=____
-        // https://ytvlive.pages.dev/jwplayers?src=______
+       
 
         mancity: " https://yosintv.github.io/player/dmca.html?url=https://hls.suanzsd6.com/hd-en-6MuT7JwXjTFxGERgmV.m3u8?txSecret=3c1cd63c3934a1e50c9a994a1630af07&txTime=68D168A6 ", 
         realmadrid: " https://ytvlive.pages.dev/sc?id=1 ", 
         liverpool: "https://ytvlive.pages.dev/ak?m=135966 ", 
         alnassr: "https://ytvlive.pages.dev/ak?m=135966 ", 
        nepal3:"https://nirutv.online/fc", 
-        nepal: "https://kasin-tv.com/hi/play.php?id=137181", 
-        nepal2: "https://embedsports.top/embed/charlie/nepal-vs-japan-1629464515/1", 
+        icc: "https://kasin-tv.com/hi/play.php?id=137182", 
+        icc2: "https://embedsports.top/embed/charlie/oman-vs-papua-new-guinea-1629464516/1", 
         //Country Live Stream
         np: " https://nirutv.online/Player/socohd?id=9912091", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
