--- a/links.html
+++ b/links.html
@@ -41,8 +41,8 @@
 
     
       
-        icc: "https://kasin-tv.com/hi/play.php?id=137187", 
-        icc2: "https://embedsports.top/embed/charlie/nepal-vs-qatar-1629464526/1", 
+        icc: "https://red-snow-dae8.yoschi.workers.dev/play.php?id=137188", 
+        icc2: "https://embedsports.top/embed/charlie/japan-vs-qatar-1629464530/1", 
   
         np: " https://nirutv.online/Player/socohd?id=9912091", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
