--- a/links.html
+++ b/links.html
@@ -41,8 +41,8 @@
 
     
       
-        LIVE: "https://red-snow-dae8.yoschi.workers.dev/play.php?id=137189", 
-         icc: "https://embedsports.top/embed/charlie/samoa-vs-united-arab-emirates-1629464531/1", 
+   
+         icc: "https://kasin-tv.com/hi/play.php?id=137189", 
         icc2: "https://embedsports.top/embed/charlie/samoa-vs-united-arab-emirates-1629464531/2", 
   
         np: " https://nirutv.online/Player/socohd?id=9912091", 
