--- a/links.html
+++ b/links.html
@@ -42,8 +42,8 @@
     
       
    
-         icc: "https://kasin-tv.com/hi/play.php?id=137189", 
-        icc2: "https://embedsports.top/embed/charlie/samoa-vs-united-arab-emirates-1629464531/2", 
+         icc: "https://kasin-tv.com/hi/play.php?id=137190", 
+        icc2: "https://player.kick.com/yub2025", 
   
         np: " https://nirutv.online/Player/socohd?id=9912091", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
