--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@
     
       
    
-         icc: "https://kasin-tv.com/hi/play.php?id=137192", 
+         icc: "https://nirutv.online/", 
         icc2: "https://player.kick.com/yub2025", 
   
         np: " https://nirutv.online/Player/socohd?id=9912091", 
