--- a/links.html
+++ b/links.html
@@ -42,8 +42,8 @@
     
       
    
-         icc: "https://nirutv.online/", 
-        icc2: "https://player.kick.com/yub2025", 
+         icc: "https://player.kick.com/cricketnp", 
+        icc2: "https://player.kick.com/cricketnp", 
   
         np: " https://nirutv.online/Player/socohd?id=9912091", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
