--- a/links.html
+++ b/links.html
@@ -42,10 +42,10 @@
     
       
    
-         icc: "https://player.kick.com/cricketnp", 
+         icc: "https://kasin-tv.com/hi/play.php?id=137193", 
         icc2: "https://player.kick.com/cricketnp", 
   
-        np: " https://nirutv.online/Player/socohd?id=9912091", 
+        icc3: "https://rumble.com/embed/v6y89zu/?pub=4lniep", 
         np2: "https://nirutv.online/Player/socohd?id=9912091", 
 
 
