--- a/links.html
+++ b/links.html
@@ -43,6 +43,7 @@
       
    
        
+    icc: "https://kasin-tv.com/hi/play.php?id=137194", 
     icc: "https://player.kick.com/cricketnp", 
     icc2: "https://rumble.com/embed/v6y8fw6/?pub=4lm7al", 
    
