--- a/page.html
+++ b/page.html
@@ -404,7 +404,7 @@
     videoFrame.src = src ? src : "about:blank";
     
     // YouTube Chat URL
-    const youtubeChatUrl = "https://www.youtube.com/live_chat?v=CcpYwQ1QiDY&embed_domain=nirutv.online";
+    const youtubeChatUrl = "https://www.youtube.com/live_chat?v=CcpYwQ1QiDY&embed_domain=yonotv.pages.dev";
     
     // Function to load YouTube chat
     function loadYouTubeChat() {
